--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@althea-net/address-converter": "^1.0.1",
-    "@althea-net/transactions": "^1.0.2",
     "@wagmi/core": "^1.3.9",
     "altheajs": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.11",
     "viem": "^1.9.2",
-    "wagmi": "^1.3.10"
+    "wagmi": "^1.3.10",
+    "web3": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
