--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@althea-net/address-converter": "^1.0.1",
+    "@althea-net/proto": "^1.0.2",
+    "@althea-net/provider": "^1.0.1",
+    "@althea-net/transactions": "^1.0.2",
     "@wagmi/core": "^1.3.9",
     "altheajs": "^1.0.2",
     "react": "^18.2.0",
